# mathjs-to-func

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  mutation.yml  publish.yml
bench/: __init__.py  __main__.py  payloads.py
bench/js/: mathjs_bench.mjs  package-lock.json  package.json
docs/: api_design.md  compatibility.md
src/: __init__.py
src/mathjs_to_func/: __init__.py  __main__.py  ast_builder.py  compiler.py  errors.py  helpers.py  introspection.py  parse.py
tests/: test_bench.py  test_cli.py  test_evaluator.py  test_mutation_coverage.py  test_oracle.py  test_parse.py
validation/: README.md  expressions.js  generate.js  package-lock.json  package.json
validation/fixtures/: arithmetic.json  array_aggregates.json  conditional.json  constants.json  functions_unary.json  logical.json  mixed.json  nullish.json  relational.json  relational_chained.json  unary.json
