[project]
name = "mathjs-to-func"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.3.4",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
