[project]
name = "mathjs-to-func"
version = "0.2.0"
description = "Compile serialized math.js expression trees into fast, reusable Python callables."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
]

keywords = [
    "mathjs",
    "compiler",
    "ast",
    "formulas",
    "numpy",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Compilers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
"Homepage" = "https://github.com/hbmartin/mathjs-to-func"
"Bug Reports" = "https://github.com/hbmartin/mathjs-to-func/issues"
"Source" = "https://github.com/hbmartin/mathjs-to-func"

[project.optional-dependencies]
parse = [
    "pydantic>=2.9.2,<3",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pydantic>=2.9.2,<3",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "ty>=0.0.1a25",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN204", "D107", "D203", "D213", "EM101", "EM102", "PLR0911", "PLR2004", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"src/mathjs_to_func/ast_builder.py" = ["ANN401", "ARG002", "D102", "N802"]
"src/mathjs_to_func/compiler.py" = ["S102"]
"src/mathjs_to_func/parse.py" = ["N815"]
"tests/*.py" = ["ANN001", "ANN002", "ANN201", "D100", "D102", "D103", "D400", "D415", "E501", "F401", "FBT003", "INP001", "PLC0415", "PLR0913", "PLR2004", "PT011", "PT006", "PT009", "PT027", "S101", "SIM115", "TRY003"]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
